# 42-Webserv

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  tmp.cpp  utils.mk
lib/libftpp/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  setup.mk
lib/libftpp/Makefiles/: build.mk  config.mk  doc.mk  help.mk  print.mk  submake.mk
lib/libftpp/libftpp/: algorithm.hpp  expected.hpp  format.hpp  memory.hpp  movable.hpp  optional.hpp  safe_bool.hpp  string.hpp  type_traits.hpp  utility.hpp
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  TimeStamp.cpp  TimeStamp.hpp  TimeoutManager.cpp
src/config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigBuilder.cpp  ConfigBuilder.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigTestSetup.hpp  ConfigTypes.hpp  Converters.cpp  Converters.hpp  DirectiveHandler.cpp  DirectiveHandler.hpp  DirectiveHandler.tpp  FileUtils.cpp  FileUtils.hpp  Lexer.cpp  Lexer.hpp  LocationBuilder.cpp  LocationBuilder.hpp  LocationConfig.cpp  LocationConfig.hpp  ParsedConfig.cpp  ParsedConfig.hpp  ParsedLocation.cpp  ParsedLocation.hpp  ParsedServer.cpp  ParsedServer.hpp  ServerBuilder.cpp  ServerBuilder.hpp  ServerConfig.cpp  ServerConfig.hpp  Token.cpp  Token.hpp
src/config/parser/: ConfigBuilder.cpp  ConfigBuilder.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigTypes.hpp  Converters.cpp  Converters.hpp  DirectiveHandler.cpp  DirectiveHandler.hpp  DirectiveHandler.tpp  Lexer.cpp  LocationBuilder.cpp  LocationBuilder.hpp  ParsedConfig.cpp  ParsedConfig.hpp  ParsedLocation.cpp  ParsedLocation.hpp  ParsedServer.cpp  ParsedServer.hpp  ServerBuilder.cpp  ServerBuilder.hpp  Token.hpp
src/event/: CMakeLists.txt  CgiReadEventHandler.cpp  CgiReadEventHandler.hpp  CgiWriteEventHandler.cpp  CgiWriteEventHandler.hpp  ClientEventHandler.cpp  ClientEventHandler.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  TimeoutManager.cpp  TimeoutManager.hpp
src/http/: Authority.cpp  Authority.hpp  CMakeLists.txt  CgiContext.cpp  CgiContext.hpp  Headers.cpp  Headers.hpp  Request.cpp  Request.hpp  Resource.cpp  Resource.hpp  Response.cpp  Response.hpp  StatusCode.cpp  StatusCode.hpp  TokenFinder.cpp  TokenFinder.hpp  Uri.cpp  Uri.hpp  headerUtils.cpp  headerUtils.hpp  http.cpp  http.hpp
src/http/abnfRules/: generalRules.cpp  generalRules.hpp  headerLineRules.cpp  headerLineRules.hpp  headerRules.cpp  headerRules.hpp  http11Rules.cpp  http11Rules.hpp  requestLineRules.cpp  requestLineRules.hpp  ruleIds.cpp  ruleIds.hpp  ruleUtils.cpp  ruleUtils.hpp  uriRules.cpp  uriRules.hpp
src/http/states/: IState.cpp  IState.hpp  ReadStartLine.cpp  ReadStartLine.hpp
src/http/utils/: BaseHeaderValidator.cpp  BaseHeaderValidator.hpp  HeaderParser.cpp  HeaderParser.hpp
src/server/: CMakeLists.txt  Server.cpp  Server.hpp  ServerHandler copy.cpp  ServerHandler.cpp  ServerHandler.hpp  ServerManager.cpp  ServerManager.hpp
src/socket/: AutoFd.cpp  AutoFd.hpp  CMakeLists.txt  Socket.cpp  Socket.hpp  SocketManager.cpp  SocketManager.hpp
src/utils/: Buffer.cpp  Buffer.hpp  BufferReader.cpp  BufferReader.hpp  CMakeLists.txt  Done.hpp  Done.tpp  FileBuffer.cpp  FileBuffer.hpp  IBuffer.cpp  IBuffer.hpp  IState.hpp  Pipe.cpp  Pipe.hpp  SmartBuffer.cpp  SmartBuffer.hpp  StateHandler.hpp  StateHandler.tpp  TimeStamp.cpp  TimeStamp.hpp  convert.cpp  convert.hpp  convert.tpp  fileUtils.cpp  fileUtils.hpp  parseArgs.cpp  parseArgs.hpp  printUtils.cpp  printUtils.hpp  tryGetStrUntil.cpp  tryGetStrUntil.hpp
src/utils/abnfRules/: AlternativRule.cpp  AlternativRule.hpp  AlternativeRule.cpp  AlternativeRule.hpp  EndRule.cpp  EndRule.hpp  Extractor.hpp  Extractor.tpp  LiteralRule.cpp  LiteralRule.hpp  RangeRule.cpp  RangeRule.hpp  RepetitionRule.cpp  RepetitionRule.hpp  Rule.cpp  Rule.hpp  RuleResult.cpp  RuleResult.hpp  SequenceRule.cpp  SequenceRule.hpp  ruleUtils.cpp  ruleUtils.hpp
src/utils/buffer/: BufferQueue.cpp  BufferQueue.hpp  FileBuffer.cpp  FileBuffer.hpp  IBuffer.cpp  IBuffer.hpp  IInBuffer.cpp  IInBuffer.hpp  IInOutBuffer.hpp  IOutBuffer.cpp  IOutBuffer.hpp  MemoryBuffer.cpp  MemoryBuffer.hpp  SmartBuffer.cpp  SmartBuffer.hpp  StaticFileBuffer.cpp  StaticFileBuffer.hpp
src/utils/logger/: Logger.cpp  Logger.hpp  LoggerHandler.cpp  LoggerHandler.hpp
src/utils/process/: ChildProcessManager.cpp  ChildProcessManager.hpp
src/utils/state/: Done.hpp  Done.tpp  IState.hpp  IState.tpp  StateHandler.hpp  StateHandler.tpp
tests/: .clang-tidy  CMakeLists.txt  spawn_clients.sh
tests/assets/: 000_simple.conf  002_with_locations.conf  003_error_pages.conf  005_multiname_server.conf  007_server_directive_duplicate.conf  009_server_multilocations.conf  010_missing_semicolon.conf  013_missing_location.conf  017_missing_location_lbrace.conf  020_missing_value.conf  025_invalid_port2.conf  028_bodysize_multiplier_b.conf  031_bodysize_multiplier_K.conf  032_bodysize_multiplier_m.conf  036_bodysize_multiplier_invalid.conf  037_invalid_errorcode.conf  039_invalid_errorcode03.conf  040_overwrite_errorcode.conf  045_additional_lbrace.conf  046_additional_rbrace.conf  048_emptylines_semicolon.conf  049_comments_in_value.conf  055_global_root.conf  056_double_bracers.conf  057_empty_server.conf  060_overlapping_hostnames.conf  063_newlines_in_directives.conf  064_negative_body_size.conf  065_not_allowed_method.conf  066_not_allowed_method02.conf  067_invalid_errorcode04.conf  070_invalid_directive00.conf  074_errorcodes01.conf  075_errorcodes02.conf  076_errorcodes03.conf  077_errorcodes04.conf  078_no_value.conf  079_negative_value.conf  080_errorcodes05.conf  091_overflow_int_min.conf  (+13 more)
tests/config/: configParserTester.cpp  test.cpp
tests/http/: headerUtilsTester.cpp  tokenFinderTester.cpp
tests/insomnia/: Insomnia.yaml
tests/locations/: locationMatchTester.cpp
tests/python/: cgiTest.py
tests/testUtils/: testUtils.hpp  testUtils.tpp
tests/utils_tests/: bufferQueueTester.cpp  convertTester.cpp  fileBufferTester.cpp  memoryBufferTester.cpp  smartBufferTester.cpp  utilsTester.cpp
(+232 files in other folders)
